compiler/test/x86/error/argc-mismatch.c
foo(a, b, c) {

}

foo(0, 1, 2, 3, 4, 5);


